force-app/main/default/objects/Car__c/fields/Cost_Template__c.field-meta.xml
<CustomField>
    <fullName>Cost_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field to Upgrade template.</description>
    <inlineHelpText>Lookup field to Upgrade template.</inlineHelpText>
    <label>Cost Template</label>
    <referenceTo>Upgrade_Template__c</referenceTo>
    <relationshipLabel>Car</relationshipLabel>
    <relationshipName>Car</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>