force-app/main/default/objects/Car__c/fields/Grand_Total_Upgrade_Cost__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Upgrade_Cost__c</fullName>
    <description>Formula for total cost of all upgrades.</description>
    <formula>(Total_Uncommon_Slots__c * Cost_Template__r.Uncommon_Part_Cost__c) +
(Total_Rare_Slots__c * Cost_Template__r.Rare_Part_Cost__c) +
(Total_Epic_Slots__c * Cost_Template__r.Epic_Part_Cost__c) +
(Cost_Template__r.Stage_Total_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula for total cost of all upgrades.</inlineHelpText>
    <label>Grand Total Upgrade Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>