force-app/main/default/objects/Car__c/fields/Max_Stars__c.field-meta.xml
<CustomField>
    <fullName>Max_Stars__c</fullName>
    <label>Max Stars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>