force-app/main/default/objects/Car__c/fields/Rarity__c.field-meta.xml
<CustomField>
    <fullName>Rarity__c</fullName>
    <label>Rarity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>