force-app/main/default/objects/Car__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>