force-app/main/default/objects/Car__c/fields/Total_Blueprints__c.field-meta.xml
<CustomField>
    <fullName>Total_Blueprints__c</fullName>
    <description>Total Blueprints.</description>
    <inlineHelpText>Total Blueprints.</inlineHelpText>
    <label>Total Blueprints</label>
    <summarizedField>Car_Star_Level__c.Blueprints_Required__c</summarizedField>
    <summaryForeignKey>Car_Star_Level__c.Car__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>