force-app/main/default/objects/Car__c/fields/Total_Epic_Slots__c.field-meta.xml
<CustomField>
    <fullName>Total_Epic_Slots__c</fullName>
    <description>Total epic import parts count.</description>
    <inlineHelpText>Total epic import parts count.</inlineHelpText>
    <label>Total Epic Slots</label>
    <summarizedField>Car_Star_Level__c.Row_Total_Epic_Count__c</summarizedField>
    <summaryForeignKey>Car_Star_Level__c.Car__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>