force-app/main/default/objects/Car__c/fields/Total_Import_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Import_Cost__c</fullName>
    <description>Formula to calculate total import parts cost.</description>
    <formula>(Total_Uncommon_Slots__c * Cost_Template__r.Uncommon_Part_Cost__c) +
(Total_Rare_Slots__c * Cost_Template__r.Rare_Part_Cost__c) +
(Total_Epic_Slots__c * Cost_Template__r.Epic_Part_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to calculate total import parts cost.</inlineHelpText>
    <label>Total Import Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>