force-app/main/default/objects/Car__c/fields/Total_Rare_Slots__c.field-meta.xml
<CustomField>
    <fullName>Total_Rare_Slots__c</fullName>
    <description>Total rare imort parts count.</description>
    <inlineHelpText>Total rare imort parts count.</inlineHelpText>
    <label>Total Rare Slots</label>
    <summarizedField>Car_Star_Level__c.Row_Total_Rare_Count__c</summarizedField>
    <summaryForeignKey>Car_Star_Level__c.Car__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>