force-app/main/default/objects/Car__c/fields/Total_Uncommon_Slots__c.field-meta.xml
<CustomField>
    <fullName>Total_Uncommon_Slots__c</fullName>
    <description>Total uncommom imort parts count.</description>
    <inlineHelpText>Total uncommom imort parts count.</inlineHelpText>
    <label>Total Uncommon Slots</label>
    <summarizedField>Car_Star_Level__c.Row_Total_Uncommon_Count__c</summarizedField>
    <summaryForeignKey>Car_Star_Level__c.Car__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>