force-app/main/default/objects/Car__c/fields/Unlock_Type__c.field-meta.xml
<CustomField>
    <fullName>Unlock_Type__c</fullName>
    <label>Unlock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blueprints</fullName>
                <default>true</default>
                <label>Blueprints</label>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>