force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Rarity__c</columns>
    <columns>Unlock_Type__c</columns>
    <columns>Max_Stars__c</columns>
    <columns>Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>